devops/Terraform/examples/create-infra-aws/modules/aws/network/sec_group/main.tf
resource "aws_security_group" "sec_grp_rds" {
  name        = "rds"
  description = "rds securety group"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

/*   ingress {
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    cidr_blocks = [
      "${var.vpc_cidr_block}"]
  } */

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 /*  egress {
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    cidr_blocks = [
      "${var.vpc_cidr_block}"]
  } */
               
  tags {
    Name = "sg-rds-${var.cluster_name}"
  }
}
